<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity$PlaceholderFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/TextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_instruction"
        android:textSize="10pt">
    </TextView>


    <EditText
        android:id="@+id/EditFirstName"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <EditText
        android:id="@+id/EditLastName"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/ButtonPushParse"
        android:text="@string/button_text"
        android:onClick="pushParse"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/ButtonParseList"
        android:text="@string/list_text"
        android:onClick="viewList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
